# filersmanager

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  file.rs  icon.rs  lib.rs  main.rs
src/widget/: mod.rs
tests/: test.rs
