[package]
name = "filersmanager"
version = "1.1.0"
edition = "2021"
authors = ["Ipsen87k <gyt3218@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.0"
chrono = "0.4.38"
env_logger = "0.11.3"
iced = {version = "0.12.1" , features = ["debug","tokio","lazy","image"]}
iced_table = "0.12.0"
log = "0.4.21"
rfd = "0.14.1"
tokio = {version = "1.37.0", features = ["fs"]}

[profile.release]
opt-level = 3
